tests/fixtures/invalid/pow_bool_float_list.py
# Cannot call pow() with Bool, Float, List[int]
x = pow(True, 1.0, [1, 2, 3])
